--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 										<div class="progress-bar progress-animated" style="width: 100%; height: 6px" role="progressbar"></div>
 									</div>
 									<div class="label-progress margin-bottom-5 text-white">
-										<h4 class="section-14px-regular-montserrat">Bubble.io</h4>
+										<h4 class="section-14px-regular-montserrat">Retool</h4>
 										<h4 class="section-14px-regular font-weight-500">90%</h4>
 									</div>
 									<div class="progress skill-progress margin-bottom-15" style="height: 6px">
